5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4529/executions/1692_1101.log
== SUBMITION (2019-04-30 18:12:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.146005
-- ERROR:
  File "/home/codebench/codes/1692/1101/main.py", line 11
    elif(b=="C"):
                ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:13:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.114569
-- ERROR:
  File "/home/codebench/codes/1692/1101/main.py", line 11
    elif(b=="C"):
                ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:13:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códx
x=float(input("x:   "))
a=float(input("a:   "))
b=float(input("b:   "))
if(b>a):
	if(x<=b)and(x>=a):
		print(x,"pertence ao intervalo ",a,", ",b)
	else:
		print(x,"nao pertence ao intervalo ",a,", ",b)
else:
	print("Entradas ",a," e ",b," invalidas")
-- EXECUTION TIME:
0.154269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1101/main.py", line 5, in <module>
    a=float(input())
ValueError: could not convert string to float: 'I'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:13:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códx
x=float(input("x:   "))
a=float(input("a:   "))
b=float(input("b:   "))
if(b>a):
	if(x<=b)and(x>=a):
		print(x,"pertence ao intervalo ",a,", ",b)
	else:
		print(x,"nao pertence ao intervalo ",a,", ",b)
else:
	print("Entradas ",a," e ",b," invalidas")
-- EXECUTION TIME:
0.193386
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1101/main.py", line 5, in <module>
    a=float(input())
ValueError: could not convert string to float: 'I'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:13:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códx
x=float(input("x:   "))
a=float(input("a:   "))
b=float(input("b:   "))
if(b>a):
	if(x<=b)and(x>=a):
		print(x,"pertence ao intervalo ",a,", ",b)
	else:
		print(x,"nao pertence ao intervalo ",a,", ",b)
else:
	print("Entradas ",a," e ",b," invalidas")
-- EXECUTION TIME:
0.180281
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1101/main.py", line 5, in <module>
    a=float(input())
ValueError: could not convert string to float: 'R'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:13:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códx
x=float(input("x:   "))
a=float(input("a:   "))
b=float(input("b:   "))
if(b>a):
	if(x<=b)and(x>=a):
		print(x,"pertence ao intervalo ",a,", ",b)
	else:
		print(x,"nao pertence ao intervalo ",a,", ",b)
else:
	print("Entradas ",a," e ",b," invalidas")
-- EXECUTION TIME:
0.185244
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1101/main.py", line 5, in <module>
    a=float(input())
ValueError: could not convert string to float: 'R'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:13:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códx
x=float(input("x:   "))
a=float(input("a:   "))
b=float(input("b:   "))
if(b>a):
	if(x<=b)and(x>=a):
		print(x,"pertence ao intervalo ",a,", ",b)
	else:
		print(x,"nao pertence ao intervalo ",a,", ",b)
else:
	print("Entradas ",a," e ",b," invalidas")
-- EXECUTION TIME:
0.193342
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1101/main.py", line 5, in <module>
    a=float(input())
ValueError: could not convert string to float: 'R'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:16:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códx
x=float(input("x:   "))
a=float(input("a:   "))
b=float(input("b:   "))
if(b>a):
	if(x<=b)and(x>=a):
		print(x,"pertence ao intervalo ",a,", ",b)
	else:
		print(x,"nao pertence ao intervalo ",a,", ",b)
else:
	print("Entradas ",a," e ",b," invalidas")
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.19797
-- ERROR:
  File "/home/codebench/codes/1692/1101/main.py", line 35
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:16:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códx
x=float(input("x:   "))
a=float(input("a:   "))
b=float(input("b:   "))
if(b>a):
	if(x<=b)and(x>=a):
		print(x,"pertence ao intervalo ",a,", ",b)
	else:
		print(x,"nao pertence ao intervalo ",a,", ",b)
else:
	print("Entradas ",a," e ",b," invalidas")
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.216822
-- ERROR:
  File "/home/codebench/codes/1692/1101/main.py", line 35
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:16:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códx
x=float(input("x:   "))
a=float(input("a:   "))
b=float(input("b:   "))
if(b>a):
	if(x<=b)and(x>=a):
		print(x,"pertence ao intervalo ",a,", ",b)
	else:
		print(x,"nao pertence ao intervalo ",a,", ",b)
else:
	print("Entradas ",a," e ",b," invalidas")
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.138301
-- ERROR:
  File "/home/codebench/codes/1692/1101/main.py", line 35
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:49) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.185547
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:55) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.190844
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:55) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.21816
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:55) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.250737
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:55) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.276103
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:55) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.261492
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:55) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.360039
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:56) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.202293
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1692/1101/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:56) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.325207
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:56) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.349018
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:56) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.277033
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:19:56) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:56) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.275735
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:56) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.417706
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:57) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.264909
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:19:57) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.211586
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1692/1101/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:20:01) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.229986
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:20:02) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:20:21) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:20:32) 
-- CODE:
a=float(input("val"))
b=input("hgugjyh")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.136569
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:21:09) 
-- CODE:
a=float(input("val"))
b=input("R OU I OU C ")
print("Entradas: ",a," kWh e tipo ",b)
if(b=="I")or(b=="R")or(b=="C")and(a>=0):
	if(b=="R"):
		if(a>500):
			c=a*0.65
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.44
		   print("Valor total: R$ ",round(c,2))
	elif(b=="C"):
		if(a>1000):
			c=a*0.60
			print("Valor total: R$ ",round(c,2))
		else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
	elif(b=="I"):
	   if(a>5000):
		   c=a*0.60
		   print("Valor total: R$ ",round(c,2))
	   else:
		   c=a*0.55
		   print("Valor total: R$ ",round(c,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.13055
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
